; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_mgmtMeter.c_mgmtMeterModifyTagNameByName.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_mgmtMeter.c_mgmtMeterModifyTagNameByName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@TSDB_CODE_APP_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [59 x i8] c"Failed to modify table %s tag column, oname: %s, nname: %s\00", align 1
@TSDB_CODE_INVALID_MSG_TYPE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mgmtMeterModifyTagNameByName(%struct.TYPE_6__* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %10 = icmp eq %struct.TYPE_6__* %9, null
  br i1 %10, label %15, label %11

11:                                               ; preds = %3
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %13 = call i32 @mgmtIsMetric(%struct.TYPE_6__* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %17, label %15

15:                                               ; preds = %11, %3
  %16 = load i32, i32* @TSDB_CODE_APP_ERROR, align 4
  store i32 %16, i32* %4, align 4
  br label %36

17:                                               ; preds = %11
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @mgmtFindTagCol(%struct.TYPE_6__* %18, i8* %19)
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* %8, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %31

23:                                               ; preds = %17
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i8*, i8** %6, align 8
  %28 = load i8*, i8** %7, align 8
  %29 = call i32 @mError(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0), i32 %26, i8* %27, i8* %28)
  %30 = load i32, i32* @TSDB_CODE_INVALID_MSG_TYPE, align 4
  store i32 %30, i32* %4, align 4
  br label %36

31:                                               ; preds = %17
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %33 = load i32, i32* %8, align 4
  %34 = load i8*, i8** %7, align 8
  %35 = call i32 @mgmtMeterModifyTagNameByCol(%struct.TYPE_6__* %32, i32 %33, i8* %34)
  store i32 %35, i32* %4, align 4
  br label %36

36:                                               ; preds = %31, %23, %15
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32 @mgmtIsMetric(%struct.TYPE_6__*) #1

declare dso_local i32 @mgmtFindTagCol(%struct.TYPE_6__*, i8*) #1

declare dso_local i32 @mError(i8*, i32, i8*, i8*) #1

declare dso_local i32 @mgmtMeterModifyTagNameByCol(%struct.TYPE_6__*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
